RESOLVED FIXED42762
Don't assert when clicking on a plug-in in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=42762
Summary Don't assert when clicking on a plug-in in WebKit2
Anders Carlsson
Reported 2010-07-21 09:46:39 PDT
Don't assert when clicking on a plug-in in WebKit2
Attachments
Patch (3.61 KB, patch)
2010-07-21 09:50 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-07-21 09:50:10 PDT
Anders Carlsson
Comment 2 2010-07-21 11:17:20 PDT
Note You need to log in before you can comment on or make changes to this bug.