Don't assert when clicking on a plug-in in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=42762

Reviewed by Sam Weinig.

WebCore:

Remove a now invalid assert and return false instead.

* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::passMouseDownEventToWidget):

WebKit2:

Add stub for PluginView::handleEvent.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::handleEvent):
* WebProcess/Plugins/PluginView.h:

Canonical link: https://commits.webkit.org/54683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63846 268f45cc-cd09-0410-ab3c-d52691b4dbfc